feat(gui): updated to work with async DAO methods